--- a/iris/iris.ipynb
+++ b/iris/iris.ipynb
@@ -465,7 +465,7 @@
     }
    ],
    "source": [
-    "# Essais\n",
+    "# Prediction\n",
     "essai = (5.0, 7.6, 3.0, 4.6)\n",
     "model.predict([essai])"
    ]
